fixed arrow not showing on judges page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -152,6 +152,13 @@ p {
       }
     }
   }
+  #ecJudgesButton{
+    display:block;
+    color: $light-blue;
+    &:hover{
+      color: #fff;
+    }
+  }
   .about {
     display: flex;
     background: #fff;
